[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art Assets/Themes/PaintMixTheme.tres" type="Theme" id=1]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberGreen.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberBlue.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberBlueDisabled.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberGreenDisabled.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberBlueActive.png" type="Texture" id=6]
[ext_resource path="res://Art Assets/UI Assets/SliderGrabberGreenActive.png" type="Texture" id=7]
[ext_resource path="res://Devices/PaintMachineControl.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.27451, 0.6, 0.690196 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.490196, 0, 1 )

[node name="Control" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1390.0
margin_bottom = -1050.0
theme = ExtResource( 1 )
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -67.0
margin_right = 95.0
margin_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 190.0
margin_bottom = 20.0

[node name="RedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
max_value = 255.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="RedLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_top = 2.0
margin_right = 163.0
margin_bottom = 17.0
text = "0%"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 44.0

[node name="BlueSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 255.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="BlueLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 144.0
margin_top = 2.0
margin_right = 163.0
margin_bottom = 17.0
text = "0%"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 190.0
margin_bottom = 68.0

[node name="GreenSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 255.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="GreenLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 144.0
margin_top = 2.0
margin_right = 163.0
margin_bottom = 17.0
text = "0%"

[node name="ColorizeButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 190.0
margin_bottom = 100.0
text = "START"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 190.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_top = 7.0
margin_right = 74.0
margin_bottom = 22.0
text = "Preview:"

[node name="PaintPreview" type="ColorRect" parent="VBoxContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 108.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/RedSlider" to="." method="_on_RedSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/BlueSlider" to="." method="_on_BlueSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/GreenSlider" to="." method="_on_GreenSlider_value_changed"]
